--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "@google-cloud/translate": "1.0.0",
-    "yargs": "8.0.2",
-    "express": "^4.13.3"
+    "debug": "~2.6.0",
+    "express": "^4.14.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "node-fetch": "^1.7.3",
+    "yargs": "8.0.2"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "1.4.17",
