--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google-cloud/translate": "1.0.0",
     "debug": "~2.6.0",
     "express": "^4.14.1",
+    "express-ws": "^3.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "node-fetch": "^1.7.3",
